# crowemi-helps

./: .gitignore  README.md  pyproject.toml
crowemi_helps/aws/: aws_core.py  aws_s3.py
crowemi_helps/logging/: s3_handler.py
tests/: test_aws.py
