[tool.poetry]
name = "crowemi-helps"
version = "0.1.6"
description = "A collection of helper classes."
authors = ["crowemi <crowemi@hotmail.com>"]
readme = "README.md"
packages = [{include = "crowemi_helps"}]

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.26.55"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
