[tool.poetry]
name = "crowemi-helps"
version = "0.1.8"
description = "A collection of helper classes."
authors = ["crowemi <crowemi@hotmail.com>"]
readme = "README.md"
packages = [{include = "crowemi_helps"}]

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.26.55"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
